[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7.0", features = [
    "dynamic",
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher"] }

bevy_kira_audio = { version = "0.10.0", features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
] }
